dark mode fix, added participantes, bsdd logo

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,30 +8,35 @@
         @apply leading-none;
         @apply tracking-tight;
         @apply text-gray-900;
-        @apply dark:text-white;
+        /*@apply dark:text-white;*/
     }
+
     h2 {
         @apply text-2xl;
         @apply font-extrabold;
-        @apply dark:text-white;
+        /* @apply dark:text-white;*/
     }
+
     h3 {
         @apply text-xl;
         @apply font-extrabold;
-        @apply dark:text-white;
+        /*@apply dark:text-white;*/
     }
+
     h4 {
         @apply text-xl;
         @apply font-bold;
-        @apply dark:text-white;
+        /*  @apply dark:text-white;*/
     }
+
     a {
         @apply text-blue-600 underline;
     }
+
     p {
         @apply my-4;
     }
-  }
+}
 
 @tailwind components;
 @tailwind utilities;
